add portward logo
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2023-09-21-diy-private-container-registry/index.qmd
+++ b/2023-09-21-diy-private-container-registry/index.qmd
@@ -250,6 +250,8 @@ aka. `docker login`
 
 [https://github.com/portward/portward](https://github.com/portward/portward)
 
+![](assets/portward-logo.png){.absolute top="-50" right=0 width="200"}
+
 # Registry auth caveats
 
 - Not a formal specification
