add demo content
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2024-04-25-future-proof-your-platforms-cicd-without-developers-noticing-a-thing/index.qmd
+++ b/2024-04-25-future-proof-your-platforms-cicd-without-developers-noticing-a-thing/index.qmd
@@ -304,6 +304,10 @@ jobs:
 
 ::::
 
+## Demo content
+
+[https://github.com/sagikazarmark/demo-kcd-bucharest-2024](https://github.com/sagikazarmark/demo-kcd-bucharest-2024)
+
 # Thank you
 
 _Any questions?_
