fix missing dag
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2024-04-25-future-proof-your-platforms-cicd-without-developers-noticing-a-thing/index.qmd
+++ b/2024-04-25-future-proof-your-platforms-cicd-without-developers-noticing-a-thing/index.qmd
@@ -220,7 +220,7 @@ make lint
 
 ```go
 func (m *Ci) Test() *Container {
-	return Container().
+	return dag.Container().
         From("golang").
 		WithSource(dag.Directory()).
 		Exec([]string{"go", "test", "-v", "./..."})
