add navigating the cloud
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2024-09-20-navigating-the-cloud/index.qmd
+++ b/2024-09-20-navigating-the-cloud/index.qmd
@@ -98,7 +98,7 @@ There is no silver bullet.
 
 ## Cloud Native application
 
-- Delivered as a container (ideally)
+- Delivered as a container
 - Horizontally scalable
 - Resilient
 - Observable
