--- a/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
+++ b/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
@@ -260,6 +260,12 @@ _Let's get our hands dirty!_
 
 [https://github.com/sagikazarmark/workshop-cnd-romania-2025](https://github.com/sagikazarmark/workshop-cnd-romania-2025)
 
+# Real world exampes
+
+[github.com/openmeterio/openmeter](https://github.com/openmeterio/openmeter)
+
+[github.com/twirphp/twirp](https://github.com/twirphp/twirp)
+
 # Feedback
 
 {{< qrcode width=400 height=400 https://forms.gle/ffDQhySWwfUByZAWA qr2 >}}
