--- a/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
+++ b/2025-05-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
@@ -215,7 +215,7 @@ make lint
 
 - Use a general-purpose programming language
 - One that developers/platform engineers already know
-- Reuseable components
+- Reusable components
 
 ## Workflows that run anywhere
 
