--- a/2025-06-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
+++ b/2025-06-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
@@ -295,7 +295,7 @@ build-metadata-package:
 
 ::: {.incremental}
 - YAML is a _data serialization_ language
-- Workflows are not strictly imperative or declarative
+- Workflows are not strictly declarative
 :::
 
 ## YAML...
