add container comment
Signed-off-by: Mark Sagi-Kazar <mark.sagikazar@gmail.com>

--- a/2025-06-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
+++ b/2025-06-05-accelerate-your-development-and-cicd-pipelines-with-dagger/index.qmd
@@ -392,7 +392,7 @@ func push() {
 
 - Write your workflows as code
 - Orchestrate containers
-- Run them anywhere
+- Run them anywhere ^[Where you can run containers]
 
 ## {#dagger-function-flow}
 
